# fortaleza-screener

./: .gitignore  README.md  pyproject.toml
.github/workflows/: daily.yml
dashboard/: app.py
data/: fortaleza.duckdb  top25.txt
data/seeds/: bairros.yaml  beaches.yaml  condohotels.yaml
docs/: index.html
src/fortaleza/: __init__.py  build_html.py  cli.py  config.py  db.py
src/fortaleza/enrich/: beach_distance.py  geocode.py  str_legality.py
src/fortaleza/ingest/: condohotels.py  fipezap.py  vivareal.py
src/fortaleza/model/: composite.py  fx.py  str_yield.py
